Working on refbooks

--- a/org.toxsoft.skf.refbooks.skide/build.properties
+++ b/org.toxsoft.skf.refbooks.skide/build.properties
@@ -1,6 +1,8 @@
-source.. = src/
-output.. = bin/
 bin.includes = META-INF/,\
                .,\
                icons/,\
-               OSGI-INF/
+               OSGI-INF/,\
+               fragment.e4xmi,\
+               plugin.xml
+source.. = src/
+output.. = bin/
