--- a/pom.xml
+++ b/pom.xml
@@ -515,6 +515,7 @@
       <modules>
         <!-- TODO rcp-библиотеки -->
         <module>org.toxsoft.skf.refbooks.gui</module>
+        <module>org.toxsoft.skf.refbooks.mws</module>
         <module>org.toxsoft.skf.refbooks.skide</module>
 
         <module>zz-releng/p2.rcp</module>
